Fixed Auth roles, works now